--- a/amplify/.config/project-config.json
+++ b/amplify/.config/project-config.json
@@ -5,8 +5,8 @@
     "javascript": {
         "framework": "react-native",
         "config": {
-            "SourceDir": "/",
-            "DistributionDir": "/",
+            "SourceDir": "src",
+            "DistributionDir": "build",
             "BuildCommand": "npm run-script build",
             "StartCommand": "npm run-script start"
         }
